# multilingual-dokugpt

./: .env.sample  .gitignore  README.md  README1.md  app.py  ggml-try.py  insert_spaces.py  install-sw.sh  install-sw1.sh  load_api_key.py  main.py  okteto.yml  package.json  pyproject.toml  requirements-cuda.txt  requirements-dev.txt  requirements-freeze.txt  requirements-gpu.txt  requirements-win10-cpu.txt  requirements.txt  run-main.sh  test.epub
docs/: 1984.epub  test.epub  test.txt  test1.txt  test2.txt
